// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IPv4 /> renders correctly with all props 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    data-t1="1Label"
    htmlFor={1}
  >
    test
  </label>
  <div
    className="input-group"
  >
    <input
      aria-invalid={false}
      autoComplete="chrome-off"
      className="form-control"
      data-t1={1}
      disabled={false}
      id={1}
      maxLength="15"
      minLength="7"
      name={1}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      size="15"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<IPv4 /> renders correctly without optional props 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    data-t1="Label"
    htmlFor=""
  >
    
  </label>
  <div
    className="input-group"
  >
    <input
      aria-invalid={false}
      autoComplete="chrome-off"
      className="form-control"
      data-t1=""
      disabled={false}
      id=""
      maxLength="15"
      minLength="7"
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      size="15"
      type="text"
      value=""
    />
  </div>
</div>
`;
